# Accout_manager

./: CMakeLists.txt  PROJECT_SUMMARY.md  README.md  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
.github/workflows/: ci.yml
emsumble_test/: CMakeLists.txt  test.cpp
models/: Budget.cpp  Budget.h  Category.cpp  Category.h  Record.cpp  Record.h  User.cpp  User.h
services/: DataStorageService.cpp  DataStorageService.h  ReminderService.cpp  ReminderService.h  ReportService.cpp  ReportService.h
tests/: CMakeLists.txt  test.cpp
ui/: BudgetWidget.cpp  BudgetWidget.h  SettingsWidget.cpp  SettingsWidget.h  StatisticsWidget.cpp  StatisticsWidget.h  TransactionWidget.cpp  TransactionWidget.h
